<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">5 Calls</string>
    <string name="location_prompt">Set your location to find your local representatives.</string>
    <string name="submit">submit</string>
    <string name="request_error">There was a problem communicating with the server. Is your device online?</string>
    <string name="json_error">Error: Invalid or no data for this location. Try again later.</string>
    <string name="call_count"><xliff:g id="callCount">%1$d</xliff:g> calls: <xliff:g id="area">%2$s</xliff:g></string>
    <string name="call_count_zero">0 calls to make</string>
    <string name="call_count_one">1 call: <xliff:g id="area">%1$s</xliff:g></string>
    <string name="call_count_today"><xliff:g id="callCount">%1$d</xliff:g> calls to make today</string>
    <string name="call_count_today_one">1 call to make today</string>
    <string name="call_count_today_done">Nice job, all calls made today!</string>
    <string name="previous_call_count_one">1 previous call</string>
    <string name="previous_call_count_many"><xliff:g id="callCount">%1$d</xliff:g> previous calls</string>
    <string name="demo_previous_call_stats_one">1 previous (pretend) call</string>
    <string name="buttons_prompt">Enter your result:</string>
    <string name="no_contacts_found">No contacts found for this issue.</string>
    <string name="no_contact_areas_message">There are no calls for this issue.</string>
    <string name="no_location_set">No contacts available</string>
    <string name="error_no_location_set">Set your location to find your representatives.</string>
    <string name="relevant_rep">Relevant contact: <xliff:g id="contact">%1$s</xliff:g></string>
    <string name="relevant_reps">Relevant contacts: <xliff:g id="contacts_list">%1$s</xliff:g></string>
    <string name="menu_about">About 5 Calls</string>
    <string name="about_title">About 5 Calls</string>
    <string name="about_header">MAKE YOUR VOICE HEARD</string>
    <string name="about_p1">Turn your passive participation into active resistance. 5 Calls is the easiest and most effective way for U.S. constituents to make a political impact.</string>
    <string name="about_p2">Spend 5 minutes, make 5 calls.</string>
    <string name="about_p3">5 Calls connects you directly with your representatives via phone numbers sourced from public government websites.
        \n\n5 Calls is an independent civic platform operated by a 501(c)(4) non-profit. We are not affiliated with, endorsed by, or representative of any official government entity or agency. Scripts clearly articulate a progressive position.</string>
    <string name="why_calling_btn">why calling works</string>
    <string name="about_app_prompt">About this app</string>
    <string name="rate_us_prompt">If the 5 Calls app has been useful to you, we would appreciate it if you rate us in the Play Store.</string>
    <string name="about_us_btn">about us</string>
    <string name="dashboard_prompt">Local and nationwide impact</string>
    <string name="dashboard_btn">Recent calling stats</string>
    <string name="contact_us_btn">contact us</string>
    <string name="intent_resolve_error">Unable to find installed app to open this link</string>
    <string name="general_prompt">General</string>
    <string name="social_prompt">Follow us on your favorite platform</string>
    <string name="facebook_btn" translatable="false">Facebook</string>
    <string name="instagram_btn" translatable="false">Instagram</string>
    <string name="bluesky_btn" translatable="false">Bluesky</string>
    <string name="threads_btn" translatable="false">Threads</string>
    <string name="mastodon_btn" translatable="false">Mastodon</string>
    <string name="rate_us_btn">Rate 5 Calls</string>
    <string name="privacy_btn">Privacy Policy</string>
    <string name="calls_to_date_placeholder">We\'ve made over 14,000,000 calls together</string>
    <string name="calls_to_date">We\'ve made <xliff:g id="callCount">%1$s</xliff:g> calls together</string>
    <string name="calls_today">So far, <xliff:g id="callsToday">%1$s</xliff:g> calls made today</string>
    <string name="about_splash">There\'s one simple and straightforward way to influence the Government that is supposed to represent you: Call them on the phone.</string>
    <string name="about_p2_2">Calling your representatives is the most effective way to influence policy.</string>
    <string name="about_splash_2">Phone calls can be stressful. 5 Calls provides scripts and phone numbers for your local representatives so calls can be quick and easy.</string>
    <string name="getting_started_header">How it works</string>
    <string name="about_p2_3">1. Choose an issue you care about</string>
    <string name="about_splash_3_1">Make calls from our list of timely and actionable issues.</string>
    <string name="about_p3_3">2. Pick a contact</string>
    <string name="about_splash_3_2">We\'ll show you who you can call, from Representatives and Senators to state-level officials.</string>
    <string name="about_p4_3">3. Read the script, or improvise</string>
    <string name="about_splash_3_3">Click your contact\'s number to call from your dialer app. Tip: Put the call on speaker and switch back to 5 Calls to read from the script.</string>
    <string name="add_your_voice">Your voice matters</string>
    <string name="about_splash_4_1">Join us: our voices are louder together</string>
    <string name="about_splash_4_2">The 5 Calls app can help you maintain involvement by reminding you several times a week to make calls.</string>
    <string name="tutorial_reminders_btn">Turn on reminders</string>
    <string name="about_reminders_on">You can customize reminders in settings.</string>
    <string name="about_reminders_off">If you change your mind, you can turn on reminders in settings.</string>
    <string name="next">Next</string>
    <string name="get_started_btn">Get started</string>
    <string name="open_source_info">The 5 Calls app is open-source and volunteer made. Find it at
        <a href="https://github.com/5calls/android\">github</a>.</string>
    <string name="version_info">Version <xliff:g id="versionName">%1$s</xliff:g> (<xliff:g id="versionCode">%2$d</xliff:g>)</string>
    <string name="menu_stats">Your impact</string>
    <string name="call_script_prompt">Your script:</string>
    <string name="contact_reason_prompt">Why you\'re calling this office:</string>
    <string name="contact_reason_default">This organization is driving legislation related to the issue.</string>
    <string name="refresh">Refresh issues</string>
    <string name="call_error_db_recorded_anyway">Call recorded for you, but we had some issues contacting the server.</string>
    <string name="call_reported_undo_format">%1$s reported</string>
    <string name="undo_action">UNDO</string>
    <string name="call_response_undone">Call report canceled</string>
    <string name="settings">Settings</string>
    <string name="setting_usage_title">Send app usage data to 5 Calls</string>
    <string name="settings_usage_summary">Data is anonymous and helps us understand how the 5 Calls app is used and make improvements.</string>
    <string name="menu_location">Update location</string>
    <string name="first_location_title">Set location</string>
    <string name="title_main">5 Calls for <xliff:g id="location">%1$s</xliff:g></string>
    <string name="btn_gps">Use my location</string>
    <string name="location_private">Your location stays private. We don\'t store it and we never
        sell data to third parties.</string>
    <string name="location_why">We\'ll figure out who you need to call</string>
    <string name="stats_activity">Your Impact</string>
    <string name="no_calls_impact_message">You haven\'t made any calls yet with the 5 Calls app!</string>
    <string name="your_call_count">Your impact is <xliff:g id="callCount">%1$d</xliff:g> calls!</string>
    <string name="your_call_count_one">Your impact is 1 call!</string>
    <string name="motivational_text">You\'re making a difference! Calling is the most effective way to influence your representatives, and here\'s what you\'ve achieved:</string>
    <string name="impact_contact">You\'ve made contact <xliff:g id="contactCallCount">"%1$d</xliff:g> times, </string>
    <string name="impact_vm">left <xliff:g id="voicemailCallCount">%1$d</xliff:g> voicemails, </string>
    <string name="impact_unavailable">and <xliff:g id="unavailableCallCount">%1$d</xliff:g> times the contact was unavailable.</string>
    <string name="impact_contact_one">You\'ve made contact 1 time, </string>
    <string name="impact_vm_one">left 1 voicemail, </string>
    <string name="impact_unavailable_one">and 1 time the contact was unavailable.</string>
    <string name="impact_calls_over_time">Calls over time</string>
    <string name="unknown_contact">Unknown contact</string>
    <string name="unknown_issue">Unknown issue</string>
    <string name="unknown_location">Unknown location</string>
    <string name="top_contacts">Your most called representatives are:</string>
    <string name="top_issues">Your top issues are:</string>
    <string name="contact_call_stat"><xliff:g id="callCount">%1$d</xliff:g> calls: <xliff:g id="repName">%2$s</xliff:g></string>
    <string name="contact_call_stat_one">1 call: <xliff:g id="repName">%1$s</xliff:g></string>
    <string name="stats_summary_total">Total</string>
    <string name="local_office_link">Call a <u>local office</u></string>
    <string name="field_office_prompt">Local offices for <xliff:g id="contactName">%1$s</xliff:g></string>
    <string name="contact_done_img_description">(contacted)</string>
    <string name="contact_details_dialog_title">You have already reported these actions:</string>
    <string name="back">back</string>
    <string name="settings_category_general">General settings</string>
    <string name="settings_category_reminders">Reminders</string>
    <string name="settings_reminders_time_title">Reminder time</string>
    <string name="settings_reminders_enable_title">Enable reminders</string>
    <string name="settings_reminders_enable_summary">Enable reminders to make 5 calls.</string>
    <string name="reminders_disabled_summary">Notifications are disabled. Turn on notifications in your device\'s settings to allow reminders.</string>
    <string name="settings_reminder_days_title">Remind me on these days</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="location_address_prompt">Enter your full address or the exact cross streets so we can accurately look up your representatives.</string>
    <string name="location_skip_prompt">You can also set your location later.</string>
    <string name="skip_location_btn">Skip for now</string>
    <string name="menu_faq">FAQ</string>
    <string name="split_district_suggestion">Use your zip + 4 or an address to get an accurate representative.</string>
    <string name="newsletter_signup_title">Get updates on the latest issues</string>
    <string name="newsletter_signup_description">Sign up for our newsletter, just one email a week</string>
    <string name="newsletter_signup_hint">Enter your email</string>
    <string name="newsletter_no_thanks">No thanks</string>
    <string name="newsletter_sign_up">Sign me up</string>
    <string name="done_donate_description">5 Calls is a grassroots supported non-profit organization</string>
    <string name="done_donate_prompt">Help keep 5 Calls free and up-to-date</string>
    <string name="done_donate_button">Donate</string>
</resources>