<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseContainer.FullHeight">

    <ScrollView
        style="@style/tutorialScrollViewStyle"
        android:layout_above="@+id/btn_back"
        >

        <LinearLayout style="@style/tutorialLinearLayoutStyle"
            android:orientation="vertical"
            >

            <TextView
                style="@style/tutorialHeadStyle"
                android:text="@string/getting_started_header"
                />

            <TextView
                style="@style/Widget.FiveCalls.TextView.Subheading"
                android:text="@string/about_p2_3"
                />

            <TextView
                style="@style/splashTextStyle"
                android:layout_marginBottom="@dimen/margin_text"
                android:text="@string/about_splash_3_1"
                />

            <TextView
                style="@style/Widget.FiveCalls.TextView.Subheading"
                android:text="@string/about_p3_3"
                />

            <TextView
                style="@style/splashTextStyle"
                android:layout_marginBottom="@dimen/margin_text"
                android:text="@string/about_splash_3_2"
                />

            <TextView
                style="@style/Widget.FiveCalls.TextView.Subheading"
                android:text="@string/about_p4_3"
                />

            <TextView
                style="@style/splashTextStyle"
                android:layout_marginBottom="@dimen/margin_text"
                android:text="@string/about_splash_3_3"
                />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_back"
        style="@style/backBtnTutorialStyle"
        android:text="@string/back"
        />

    <ImageView
        style="@style/tutorialProgressIndicatorStyle"
        android:src="@drawable/progress_dots_3"
        android:importantForAccessibility="no"
        />

    <Button
        android:id="@+id/btn_next"
        style="@style/nextBtnTutorialStyle"
        android:text="@string/next"
        />

</RelativeLayout>