<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/menu_stats"
        android:icon="@drawable/ic_show_chart_black_24dp"
        android:title="@string/menu_stats"
        />

    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/menu_about"
        />

    <item
        android:id="@+id/menu_faq"
        android:icon="@drawable/ic_live_help_white_24dp"
        android:title="@string/menu_faq"
        />

    <item
        android:id="@+id/menu_location"
        android:icon="@drawable/ic_gps_fixed_white_24dp"
        android:title="@string/menu_location"
        />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"
        />
</menu>