<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_location"
        android:icon="@drawable/ic_gps_fixed_white_24dp"
        android:title="@string/menu_location"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_stats"
        android:title="@string/menu_stats"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        app:showAsAction="never"
        />

</menu>