<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseContainer.FullHeight">

    <ScrollView
        style="@style/tutorialScrollViewStyle"
        android:layout_above="@+id/btn_back"
        >

        <LinearLayout style="@style/tutorialLinearLayoutStyle"
            android:orientation="vertical"
            >

            <TextView
                style="@style/tutorialHeadStyle"
                android:text="@string/add_your_voice"
                />

            <TextView
                style="@style/splashTextStyle"
                android:layout_marginBottom="@dimen/margin_text"
                android:text="@string/about_splash_4_1"
                />

            <TextView
                android:id="@+id/calls_to_date"
                style="@style/subheadingTutorialStyle"
                />

            <TextView
                style="@style/splashTextStyle"
                android:layout_marginBottom="@dimen/margin_text"
                android:text="@string/about_splash_4_2"
                />

            <Button
                style="@style/genericButtonStyle"
                android:id="@+id/reminders_btn"
                android:text="@string/tutorial_reminders_btn"
                />

            <TextView
                style="@style/splashTextStyle"
                android:layout_marginTop="@dimen/margin_text"
                android:layout_marginBottom="@dimen/margin_text"
                android:text="@string/about_reminders_on"
                android:id="@+id/reminders_done"
                android:visibility="gone"
                />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_back"
        style="@style/backBtnTutorialStyle"
        android:text="@string/back"
        />

    <ImageView
        style="@style/tutorialProgressIndicatorStyle"
        android:src="@drawable/progress_dots_4"
        android:importantForAccessibility="no"
        />

    <Button
        android:id="@+id/get_started_btn"
        style="@style/nextBtnTutorialStyle"
        android:text="@string/get_started_btn"
        />

</RelativeLayout>