<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseContainer.FullHeight"
    >

    <ScrollView
        style="@style/tutorialScrollViewStyle"
        android:layout_above="@+id/btn_next"
        >

        <LinearLayout
            style="@style/tutorialLinearLayoutStyle"
            android:orientation="vertical"
            >

            <TextView
                style="@style/tutorialHeadStyle"
                android:text="@string/about_header"
                />

            <TextView
                style="@style/subheadingTutorialStyle"
                android:text="@string/about_p2"
                />

            <TextView
                style="@style/splashTextStyle"
                android:text="@string/about_splash"
                />
        </LinearLayout>

    </ScrollView>

    <ImageView
        style="@style/tutorialProgressIndicatorStyle"
        android:importantForAccessibility="no"
        android:src="@drawable/progress_dots_1"
        />

    <Button
        android:id="@id/btn_next"
        style="@style/nextBtnTutorialStyle"
        android:text="@string/next"
        />
</RelativeLayout>