<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    style="@style/scrollViewStyle">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appbar">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scroll_view"
        style="@style/scrollViewStyle"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            style="@style/mainLinearLayout"
            android:orientation="vertical"
            tools:context="org.a5calls.android.a5calls.controller.LocationActivity"
            >

            <TextView
                android:id="@+id/location_prompt"
                style="@style/headingStyle"
                android:text="@string/location_why"
                />

            <TextView
                android:id="@+id/location_why"
                style="@style/spacedParagraphTextStyle"
                android:text="@string/location_prompt"
                />

            <Button
                android:id="@+id/gps_button"
                style="@style/locationGpsBtnStyle"
                android:text="@string/btn_gps"
                />

            <TextView
                style="@style/spacedParagraphTextStyleHighlight"
                android:text="@string/location_private"
                />

            <TextView
                style="@style/spacedParagraphTextStyleErrorHighlight"
                android:id="@+id/district_split_suggestion"
                android:text="@string/split_district_suggestion"
                android:visibility="gone"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                >

                <EditText
                    android:id="@+id/address_edit"
                    style="@style/zipEditTextStyle"
                    />

                <Button
                    android:id="@+id/address_submit"
                    style="@style/submitBtn"
                    />
            </RelativeLayout>

            <TextView
                style="@style/spacedParagraphTextStyle"
                android:text="@string/location_address_prompt"
                />

            <LinearLayout
                android:id="@+id/skip_location_section"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    style="@style/spacedParagraphTextStyle"
                    android:text="@string/location_skip_prompt"
                    />

                <Button
                    android:id="@+id/skip_location_btn"
                    style="@style/genericButtonStyle"
                    android:text="@string/skip_location_btn"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>