<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/newsletterCardStyle"
        android:orientation="vertical"
        >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/location_prompt"
            style="@style/newsletterTitleStyle"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/location_why"
            style="@style/newsletterDescriptionStyle"
            />

        <Button
            style="@style/newsletterButtonStyle"
            android:text="@string/first_location_title"
            android:id="@+id/set_location_button" />


    </LinearLayout>

</LinearLayout>