<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="@dimen/h1_text_size"
            android:text="@string/about_header"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_splash"
            android:textSize="@dimen/text_size_paragraph"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorPrimary"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_p2"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorAccent"
            />

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calls_to_date"
            android:textSize="@dimen/h2_text_size"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/accessibility_min_size"
            android:id="@+id/get_started_btn"
            android:text="@string/get_started_btn"
            android:layout_marginTop="32dp"
            android:background="@color/button_color"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            />

    </LinearLayout>
</ScrollView>